--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "gn8sockets",
   "version": "1.0.0",
-  "description": "Sockets para gn8",
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +10,9 @@
     "express": "^4.14.0",
     "mongojs": "^2.4.0",
     "socket.io": "^1.7.2"
-  }
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
+  } 
 }
