--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.14.0",
     "mongojs": "^2.4.0",
     "socket.io": "^1.7.2"
