--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.173.0",
     "body-parser": "^1.18.2",
-    "express": "^4.14.0",
+    "express": "^4.16.2",
     "mongojs": "^2.4.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "socket.io": "^1.7.2"
   }
 }
