--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   "dependencies": {
     "aws-sdk": "^2.173.0",
     "body-parser": "^1.18.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongodb": "^3.0.1",
     "mongojs": "^2.4.0",
     "multer": "^1.3.0",
     "multer-s3": "^2.7.0",
+    "package.json": "^2.0.1",
+    "passport": "^0.1.17",
     "socket.io": "^1.7.2"
   }
 }
